mcp/1.0/modules/ROOT/pages/mcp-connector-reference.adoc
= MCP Connector 1.0 Reference

Anypoint Connector for MCP (MCP Connector) allows Mule applications to act as both MCP servers and clients. When acting as an MCP client, MuleSoft facilitates the creation of integrations and orchestrations where AI agents are integrated as just another system in the workflow.

== Configurations

[[Client]]
=== Client

Configuration element that acts as a client and connects to an MCP server.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | Yes
| Connection a| One of:

* <<Client_StreamableHttpClient, Streamable Http Client>>
* <<Client_SseClient, Sse Client>> (Deprecated)
 | The connection types to provide to this configuration. | | Yes
| Client Name a| String |  Name the client uses to identify itself during the protocol initialization phase. This isn't the same as the name given to this config element (which is later referenced through config-ref parameters). This name doesn't need to be unique. |  | Yes
| Client Version a| String | Version the client uses to identify itself during the protocol initialization phase. This doesn't need to match the connector or Mule application version. |  | Yes
| Name a| String |  ID used to reference this configuration. |  | Yes
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types


[[Client_SseClient]]
===== SSE Client

Streamable HTTP transport is recommended.

The SSE (Server-Sent Events) Client connection type enables MCP Connector to establish a persistent, one-way (server-sent) connection to an MCP server using the SSE standard. This type of connection allows the MCP server to push real-time updates and messages to the client without the need for the client to constantly poll for new information.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Request Timeout a| Number |  Sets the duration to wait for server responses before timing out requests. |  30 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit for the requestTimeout parameter |  SECONDS |
| Authentication a| HttpRequestAuthentication |  |  | 
| Server Url a| String |  The base URL for the target MCP server |  | *Yes*
| Sse Endpoint Path a| String |  |  /sse | 
| Reconnection Delay a| Number |  Specifies how long to wait before reinitializing the SSE connection when it times out or closes. |  500 | 
| Reconnection Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit for the reconnectionDelay |  MILLISECONDS | 
| Tls Context a| <<Tls>> |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

[[Client_StreamableHttpClient]]
===== Streamable HTTP Client

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Request Timeout a| Number |  Sets the duration to wait for server responses before timing out requests. |  30 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit for the requestTimeout parameter |  SECONDS | 
| Authentication a| HttpRequestAuthentication |  |  | 
| Server Url a| String |  The base URL for the target MCP server |  | *Yes*
| Mcp Endpoint Path a| String |  |  /mcp | 
| Tls Context a| <<Tls>> |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | 
|===

== Supported Operations

* <<CallTool>> 
* <<ListResources>> 
* <<ListTools>> 
* <<Ping>> 
* <<ReadResource>> 

[[Server]]
=== Server

Configuration element to act as an MCP server.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | *Yes*
| Connection a| * <<Server_SseServer, Sse Server>> 
* <<Server_StreamableHttpServer, Streamable Http Server>> 
 | The connection types to provide to this configuration. | | *Yes*
| Server Name a| String |  Name this server uses to identify itself during the protocol initialization phase. This isn't the same as the name given to this config element (which is later referenced through config-ref parameters). This name doesn't need to be unique.  |  | *Yes*
| Server Version a| String | Version this server uses to identify itself during the protocol initialization phase. This doesn't need to match the connector or Mule application version.  |  | *Yes*
| Name a| String |  ID used to reference this configuration. |  | *Yes*
|===


==== Connection Types

[[Server_SseServer]]
===== SSE Server

Exposes the MCP server using the SSE transport, as defined in https://spec.modelcontextprotocol.io/specification/2024-11-05/basic/transports/#http-with-sse[HTTP with SSE]. 


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Request Timeout a| Number |  Request timeout |  10 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Request Timeout unit |  SECONDS | 
| Listener Config a| String |  Reference to the HTT Listener config used to expose the SSE and messaging endpoints. |  | *Yes*
| Sse Endpoint Path a| String |  The endpoint path clients use to initiate the SSE connection. |  /sse | 
| Messages Path a| String |  The path to send the messaging endpoint request to. |  /message | 
| Default Sse Response Headers a| Object |  |  | 
| Default Message Response Headers a| Object |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | 
|===

[[Server_StreamableHttpServer]]
===== Streamable HTTP Server


Exposes the MCP server using the Streamable HTTP transport, as defined in https://modelcontextprotocol.io/specification/2025-03-26/basic/transports#streamable-http[Streamable HTTP].


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Request Timeout a| Number |  Request timeout |  10 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Request Timeout unit |  SECONDS | 
| Listener Config a| String |  Reference to the http:listener-config used to expose the SSE and messaging endpoints. |  | *Yes*
| Mcp Endpoint Path a| String |  The endpoint path clients will use to initiate the SSE connection |  `/mcp` | 
| Response Content Type a| Enumeration, one of:

** JSON
** SSE |  Whether responses should be sent by initiating a SSE stream or returning a single application/json body. |  SSE | 
| Default Response Headers a| Object |  Custom headers to include on all valid responses (not including rejected invalid requests). |  | 
| Session Idle Timeout a| Number |  Timeout for idle sessions |  5 | 
| Session Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit qualifying the sessionIdleTimeout |  MINUTES | 
| Sessions Object Store a| ObjectStore |  An ObjectStore used to store session information. When deploying to multiple replicas, it is recommended to define a specific object store that will be distributed across all of them, either through Hazelcast or OSv2. If not specified, a default transient instance will be created. |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  | 
|===


== Associated Sources

* <<OnNewSessionListener>> 
* <<ResourceListener>> 
* <<ToolListener>> 

== Operations

[[CallTool]]
== MCP Client - Call Tool
`<mcp:call-tool>`

Invokes a tool in a remote MCP server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Tool Name a| String | Name of the tool to invoke. |  | Yes
| Arguments a| Object | The tool's input arguments.  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Additional Properties a| Object |  |  #[null] | 
| Target Variable a| String | Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field.|  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |<<CallToolResponse>>
| Attributes Type | Any
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:INTERNAL_ERROR 
* MCP:INVALID_PARAMS 
* MCP:INVALID_REQUEST 
* MCP:JSON_RPC_ERROR 
* MCP:METHOD_NOT_FOUND 
* MCP:PARSE_ERROR 
* MCP:REQUEST_TIMEOUT 
* MCP:RETRY_EXHAUSTED 
* MCP:SERVER_ERROR 



[[ListResources]]
== MCP Client - List Resources
`<mcp:list-resources>`

Lists all the available resources in the remote MCP server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field.|  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of <<ResourceMetadata>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:INTERNAL_ERROR 
* MCP:INVALID_PARAMS 
* MCP:INVALID_REQUEST 
* MCP:INVALID_URI 
* MCP:JSON_RPC_ERROR 
* MCP:METHOD_NOT_FOUND 
* MCP:PARSE_ERROR 
* MCP:REQUEST_TIMEOUT 
* MCP:RETRY_EXHAUSTED 
* MCP:SERVER_ERROR 



[[ListTools]]
== MCP Client - List Tools
`<mcp:list-tools>`

Lists all the available tools in the remote MCP server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of <<ToolMetadata>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:INTERNAL_ERROR 
* MCP:INVALID_PARAMS 
* MCP:INVALID_REQUEST 
* MCP:JSON_RPC_ERROR 
* MCP:METHOD_NOT_FOUND 
* MCP:PARSE_ERROR 
* MCP:REQUEST_TIMEOUT 
* MCP:RETRY_EXHAUSTED 
* MCP:SERVER_ERROR 



[[Ping]]
== MCP Client - Ping
`<mcp:ping>`

Pings the remote server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| Any
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:RETRY_EXHAUSTED 


[[ReadResource]]
== MCP Client - Read Resource
`<mcp:read-resource>`

Reads a resource referenced by its URI.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Uri a| String |  |  | Yes
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Additional Properties a| Object |  |  #[null] | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |<<ResourceContent>>
| Attributes Type | Any
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:INTERNAL_ERROR 
* MCP:INVALID_PARAMS 
* MCP:INVALID_REQUEST 
* MCP:INVALID_URI 
* MCP:JSON_RPC_ERROR
* MCP:METHOD_NOT_FOUND 
* MCP:PARSE_ERROR 
* MCP:REQUEST_TIMEOUT 
* MCP:RETRY_EXHAUSTED 
* MCP:SERVER_ERROR 



== Sources

[[OnNewSessionListener]]
== MCP Server - On New Session Listener
`<mcp:on-new-session-listener>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reject With Status Code a| Number |  |  | 
| Reject With Message a| String |  |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |<<NewSessionRequest>>
|===

=== For Configurations

* <<Server>> 


[[ResourceListener]]
== MCP Server - Resource listener
`<mcp:resource-listener>`

Exposes a resource whose content is generated by the execution of the owning flow. The flow is executed for every received resources/read request. The user can choose to implement the flow so that the resource content is static or to make it dynamic. For instance, a dynamic resource could be a expenses.csv file, that is actually the result of executing a live DB query. Or a static resource could be a file obtained through Amazon S3 and locally cached using the `ee:cache` component.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Name a| String | Name of the resource. |  | Yes
| Description a| String | Detailed enough description for an LLM to determine when to read this resource. |  | Yes
| Uri a| String |  Resource URI. |  | Yes
| Resource Mime Type a| String |  Resource MIME type. |  | Yes
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Resource Listener a| One of:

* <<TextResource>>
* <<BlobResource>> |Defines the resource content and type. These parameters are evaluated when the flow finishes successfully (when the payload and variables available). |  | Yes
|===

=== Output

[%autowidth.spread]
|===
|Type |<<ResourceRequest>>
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 

[[ToolListener]]
== MCP Server - Tool Listener
`<mcp:tool-listener>`

Exposes a tool whose result is generated by the execution of the owning flow. The flow will be executed for every received tools/call request. When triggered, the flow will be executed with a message whose payload is a Java map holding the input arguments. The tool response is generated when the flow finishes either successfully or with error. In both cases, the response can include several content items of different types. If no error response is defined, then a text content item holding the error's description will be generated automatically.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | Yes
| Name a| String |  The tool's name |  | Yes
| Description a| String |  A detailed enough description for an LLM to determine when this tool should be called |  | Yes
| Parameters Schema a| String |  A JSON schema defining an object whose fields will act as the tool's input arguments |  | Yes
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | Yes
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Responses a| Array of One of:

* <<TextToolResponseContent>>
* <<ImageToolResponseContent>>
* <<TextResourceToolResponseContent>>
* <<BlobResourceToolResponseContent>> | Response items when the flow finishes successfully.  |  | Yes
| On Error Responses a| Array of One of:

* <<TextToolResponseContent>>
* <<ImageToolResponseContent>>
* <<TextResourceToolResponseContent>>
* <<BlobResourceToolResponseContent>> |Content items when the flow finishes in error.  |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Object
| Attributes Type | <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 


== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  | 
| Password a| String | Password used to protect the truststore. |  | 
| Type a| String | Type of store. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses. |  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  | 
| Type a| String | Type of store. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  | 
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  | 
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Don't use the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  | 
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[CallToolResponse]]
=== Call Tool Response

Response obtained from calling a tool as a client.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Contents a| Array of <<CallToolResponseContent>> | The contents generated by the tool |  | Yes
| Error a| Boolean | Whether the tool execution was successful or errored out. Notice that even in case of error, contents might have been
 generated. | false | 
|===

[[CallToolResponseContent]]
=== Call Tool Response Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Type a| Enumeration, one of:

** text
** image
** resource | Content type.  |  | Yes
| Text a| String | Content's payload when type is `text`.  |  | 
| Mime Type a| String | Content's MIME type.  |  | 
| Data a| Binary | Content's payload when type is `image`.  |  | 
| Resource a| <<ResourceContent>> |Content's payload when type is `resource`.  |  | 
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences. |  | 
| Priority a| Number |Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional.  |  | 
|===

[[ResourceContent]]
=== Resource Content

A flattened representation of a resource content. The resource can be either text or blob types. The text property is set for text resources, while the blob type is used for the latter.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Uri a| String |Resource URI  |  | Yes
| Mime Type a| String | Resource MIME type. |  | Yes
| Text a| String |Content of a text resource. Null for BLOB data types.   |  | 
| Blob a| Binary | Content of a BLOB resource. Null for text data types.|  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | Yes
|===

[[ResourceMetadata]]
=== Resource Metadata

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Uri a| String | Resource URI.  |  | Yes
| Name a| String | Name of the resource. |  | Yes
| Description a| String | Description of the resource. |  | Yes
| Mime Type a| String | MIME type of the resource. |  | Yes
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the Buffer Size Increment value, with an upper limit of the Max In Memory Size value. instances. | 100 | 
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. | 100 | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit.  |  | 
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | Maximum number of instances to keep in memory. If more than the maximum is required, content on the disk is buffered. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Objects* field. |  | 
|===

[[ToolMetadata]]
=== Tool Metadata

Describes a tool through its properties.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Name of the tool. |  | Yes
| Description a| String |A detailed enough description for an LLM to determine when to call this tool. |  | Yes
| Input Schema a| String | JSON Schema describing the tool's input parameters.  |  | Yes
|===

[[NewSessionRequest]]
=== New Session Request

Contains the data associated to a client requiring the creation of a new server session.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Session Id a| String |  |  | Yes
| Additional Properties a| Object |  |  | Yes
| Client Certificate a| <<CertificateData>> |  |  | 
|===

[[CertificateData]]
=== Certificate Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Basic Constraints a| Number |  |  | 
| Critical Extension OI Ds a| Array of String |  |  | 
| Encoded a| Binary |  |  | 
| Extended Key Usage a| Array of String |  |  | 
| Extensions a| Array of <<CertificateExtension>> |  |  | 
| Issuer Alternative Names a| Array of <<AlternativeNameData>> |  |  | 
| Issuer DN a| <<PrincipalData>> |  |  | 
| Issuer Unique ID a| Array of Boolean |  |  | 
| Issuer X500 Principal a| <<X500PrincipalData>> |  |  | 
| Key Usage a| Array of Boolean |  |  | 
| Name a| String |  |  | 
| Non Critical Extension OI Ds a| Array of String |  |  | 
| Not After a| Date |  |  | 
| Not Before a| Date |  |  | 
| Public Key a| <<PublicKeyData>> |  |  | 
| Serial Number a| Number |  |  | 
| Serial Number Object a| <<SerialNumberData>> |  |  | 
| Sig Alg Name a| String |  |  | 
| Sig Alg OID a| String |  |  | 
| Sig Alg Params a| Binary |  |  | 
| Signature a| Binary |  |  | 
| Subject Alternative Names a| Array of <<AlternativeNameData>> |  |  | 
| Subject DN a| <<PrincipalData>> |  |  | 
| Subject X500 Principal a| <<X500PrincipalData>> |  |  | 
| Type a| String |  |  | 
| Version a| Number |  |  | 
|===

[[CertificateExtension]]
=== Certificate Extension

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Criticality a| Boolean |  |  | 
| Oid a| String |  |  | 
| Value a| Binary |  |  | 
|===

[[AlternativeNameData]]
=== Alternative Name Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String |  |  | 
| Type a| Number |  |  | 
|===

[[PrincipalData]]
=== Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Common Name a| String |  |  | 
| Name a| String |  |  | 
|===

[[X500PrincipalData]]
=== X500 Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String |  |  | 
|===

[[PublicKeyData]]
=== Public Key Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Algorithm a| String |  |  | 
| Encoded a| Binary |  |  | 
| Modulus a| Number |  |  | 
| Params a| Number |  |  | 
| Public Key a| String |  |  | 
|===

[[SerialNumberData]]
=== Serial Number Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Serial Number a| Number |  |  | 
|===
[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  | 
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  | 
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  | 
|===
[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  | 
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  | 
|===

[[ResourceRequest]]
=== Resource Request

An inbound request for a resource, used when the connector is acting as an MCP server.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Requested Uri a| String |  |  | Yes
|===

[[RequestAttributes]]
=== Request Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Session Id a| String |  |  | Yes
| Request Id a| String |  |  | Yes
| Additional Properties a| Object | Additional values attached to the request as HTTP Headers. |  | Yes
|===

[[TextToolResponseContent]]
=== Text Tool Response Content

Defines a text content that's part of the response of a tool implemented through this connector.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Text a| String |  |  | Yes
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content that's useful for multiple audiences. |  | 
| Priority a| Number | Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
|===

[[ImageToolResponseContent]]
=== Image Tool Response Content

Defines an image content that's part of the response of a tool implemented through this connector.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences. |  | 
| Priority a| Number | Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
| Data a| Binary | The raw image content, without Base64 encoding. |  | 
| Mime Type a| String | The image MIME type. |  | 
|===

[[TextResourceToolResponseContent]]
=== Text Resource Tool Response Content

Defines an embedded text resource that's part of the response of a tool implemented through this connector.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences.  |  | 
| Priority a| Number |Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
| Uri a| String | Resource URI. |  | 
| Mime Type a| String | The resource MIME type. |  | 
| Text a| String | Resource text. |  | 
|===

[[BlobResourceToolResponseContent]]
=== Blob Resource Tool Response Content

Defines an embedded blob resource that's part of the response of a tool implemented through this connector.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences. |  | 
| Priority a| Number | Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
| Blob a| Binary |The raw resource content, without Base64 encoding.   |  | Yes
| Uri a| String | Resource URI. |  | 
| Mime Type a| String | The resource MIME type. |  |
|===

[[TextResource]]
=== Text Resource

Defines a text resource.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Text a| String | Text content. |  | Yes
|===

[[BlobResource]]
=== Blob Resource

Defines the contents of a Blob resource.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Blob a| Binary | The raw blob content, without Base64 encoding.  |  | Yes
|===

[[CustomHeader]]
=== Custom Header

Configures a custom header to be included in requests or responses.

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Key a| String | The header name. |  | Yes
| Value a| String | The header value. Supports property placeholders and DataWeave expressions. |  | Yes
|===

== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[MCP Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]